# HelloCmake

./: CMakeLists.txt
lib/: hello.h
src/: CMakeLists.txt  main.c
